--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,33 +1,3 @@
 name = "foundr"
 compatibility_date = "2025-01-01"
-pages_build_output_dir = "./build/client"
-
-[[d1_databases]]
-binding = "DB"
-database_name = "foundr-db"
-database_id = "your-database-id-here"
-
-[[r2_buckets]]
-binding = "ASSETS"
-bucket_name = "foundr-assets"
-
-[[kv_namespaces]]
-binding = "CACHE"
-id = "your-kv-id-here"
-
-[vars]
-# VibeSDK Configuration
-VIBESDK_URL = "https://vibesdk-production1.gogs1998.workers.dev"
-# Get your own API key from VibeSDK or use your own deployment
-
-# OpenRouter Configuration (Free AI Models)
-# Get your free API key from https://openrouter.ai/
-# OPENROUTER_API_KEY = "your-openrouter-api-key-here"
-
-# Clerk Configuration (Authentication)
-# CLERK_PUBLISHABLE_KEY = "pk_test_..."
-# CLERK_SECRET_KEY = "sk_test_..."
-
-# Stripe Configuration (Billing)
-# STRIPE_SECRET_KEY = "sk_test_..."
-# STRIPE_PUBLISHABLE_KEY = "pk_test_..."
+pages_build_output_dir = "build/client"
